First working version. Got Neotrellis pad controlling the example samples from the teensy audio board example. No SD card support yet.
Removed unneeded files.

--- a/teensy_test/platformio.ini
+++ b/teensy_test/platformio.ini
@@ -12,3 +12,9 @@
 platform = teensy
 board = teensy31
 framework = arduino
+
+lib_deps =
+        ;  Adafruit NeoPixel
+        ;  Adafruit GFX Library
+         SPI
+        ;  I2S
